apps/platform/envoy-gateway/templates/external-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-server
  namespace: default
spec:
  type: ExternalName
  externalName: 192.168.1.81
  ports:
    - port: 443
      protocol: TCP
