apps/platform/envoy-gateway/templates/gateway-main.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-gateway
  namespace: envoy-gateway
  annotations:
    cert-manager.io/revision-history-limit: "1"
    cert-manager.io/cluster-issuer: letsencrypt-dns
spec:
  gatewayClassName: envoy-gateway
  addresses:
    - type: IPAddress
      value: 10.0.0.242
  listeners:
    # Redirect plain HTTP for the apex domain to HTTPS.
    - name: web-http-apex
      protocol: HTTP
      port: 80
      hostname: "joeriberman.nl"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              gateway.joeriberman.nl/allow: "true"

    # Redirect plain HTTP for *.joeriberman.nl to HTTPS.
    - name: web-http
      protocol: HTTP
      port: 80
      hostname: "*.joeriberman.nl"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              gateway.joeriberman.nl/allow: "true"

    # HTTPS Termination for the apex domain joeriberman.nl (wildcard does NOT match apex)
    - name: web-https-apex
      protocol: HTTPS
      port: 443
      hostname: "joeriberman.nl"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              gateway.joeriberman.nl/allow: "true"
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: apex-tls

    # HTTPS Termination for *.joeriberman.nl
    - name: web-https
      protocol: HTTPS
      port: 443
      hostname: "*.joeriberman.nl"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              gateway.joeriberman.nl/allow: "true"
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: wildcard-tls
