apps/platform/envoy-gateway/templates/gateway-passthrough.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-gateway-passthrough
  namespace: envoy-gateway
spec:
  gatewayClassName: envoy-gateway
  addresses:
    - type: IPAddress
      value: 10.0.1.2
  listeners:
    - name: tls-passthrough
      protocol: TLS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Passthrough
