apps/platform/envoy-gateway/templates/portfolio-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: portfolio-route
spec:
  hostnames:
    - joeriberman.nl
  rules:
    - backendRefs:
        - group: gateway.networking.k8s.io
          kind: IPAddress
          name: portfolio-ip
          port: 3010
